2007-02-05  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-fontify): Don't delete things like tags in forms of
	type=text as well as of type=textarea.

2007-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add
	national.incident, politics.government, politics.local,
	shopping.interiorlife, shopping.master, shopping.otoriyose,
	shopping.protalk, shopping.yakimono.ono, shopping.yakimono.yellin,
	sports.battle, sports.battle.column, sports.golf, sports.motor,
	sports.rugby, sports.sumo, sports.usa and sports.winter groups;
	update index url and regexp for shopping.kishi and shougi groups.
	(shimbun-asahi-prepare-article): Fix start and end boundaries for
	shopping.interiorlife group.

	* w3m.el (w3m-arrived-intern): New macro, that normalizes urls by
	stripping last `/'s.
	(w3m-arrived-add, w3m-arrived-p, w3m-arrived-time)
	(w3m-arrived-put, w3m-arrived-get): Use it.
	(w3m-create-text-page): Make sure to set w3m-current-title.

2007-02-04  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Added
	`w3m-relationship-slashdot-estimate'.
	(w3m-relationship-slashdot-estimate): New function.

2007-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove
	international.america, kansai.kataritsugu, nankyoku,
	nankyoku.borderless, nankyoku.people and nankyoku.whitemail groups;
	add international.africa, international.briefing,
	international.kawakami, international.korea,
	international.namerica, international.oceania,
	international.samerica, international.shizuki and
	international.weekly-asia groups; update index urls and regexps
	for igo, international.shien and kansai.* groups.
	(shimbun-asahi-get-headers): Fix url for international.briefing
	group.
	(shimbun-asahi-prepare-article): Fix start and end boundaries for
	international.briefing group.

	* w3m.el (w3m-menu-on-forefront): New variable.
	(w3m-setup-menu): Use it.
